# backend/src/main/java/me/owlaukka/api/exceptionmappers/ValidationExceptionMapper.java
@@ -5,14 +5,20 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.ext.ExceptionMapper;
 import jakarta.ws.rs.ext.Provider;
-import me.owlaukka.model.Error;
+import me.owlaukka.model.ValidationError;
+
+import java.util.stream.Collectors;
 
 @Provider
 public class ValidationExceptionMapper implements ExceptionMapper<ConstraintViolationException> {
     @Override
     public Response toResponse(ConstraintViolationException e) {
-        Error error = new Error()
-                .code("VALIDATION_ERROR")
+        var invalidFields = e.getConstraintViolations().stream()
+                .map(violation -> violation.getPropertyPath().toString())
+                .collect(Collectors.toSet());
+
+        ValidationError error = new ValidationError()
+                .fields(invalidFields.stream().toList())
                 .message("Invalid input parameters: " + e.getMessage());
         return Response.status(Response.Status.BAD_REQUEST)
                 .entity(error)
